Fixed minor margin spacing issue
Changed styles.css to remove the scroll bar on the about page.

--- a/static/styles.css
+++ b/static/styles.css
@@ -241,7 +241,7 @@ body{
     align-self: center;
     align-items: center;
     padding: 40px;
-    margin: 0.1rem;
+    margin: 0px;
     background-color: #4646463b;
     width: 40%;
 
